# nyc_play_calendar

./: .gitignore  README.md  pyproject.toml  update_site.sh
.github/workflows/: tests.yml
docs/: PLANNING.md  index.html
docs/theaters/: astor_place.html  asylum.html  caveat.html  chain_theatre.html  here.html  liberty.html  nytw.html  parkside_lounge.html  performance_space.html  public_theater.html  rat_nyc.html  slipper_room.html  tnc.html  under_st_marks.html  vineyard.html  wild_project.html
examples/frigid/event_pages/climate_fables/: climate_fables.html
examples/frigid/event_pages/climate_fables/climate_fables_files/: anchor.html  bootstrap-input-spinner.js  frontend.min.js  react.min.js
examples/frigid/main_page/: frigid_main_page.html
examples/frigid/main_page/frigid_main_page_files/: 2.chunk.js  anchor.html  api.js  bootstrap-datepicker.js  clamp.js  main.chunk.js  react-player-embedded.js  react-wordpress-connector.js  styles.min.css
examples/public_theater/event_pages/pericles/: pericles_event.html
examples/public_theater/event_pages/pericles/pericles_event_files/: 321331775237554  calendar-scripts.js.v1  content-blocks.css  css(1)  designer-override.css  destination(1)  f.txt  global.css  hotjar-1558461.js  press.css  rum.min.js  saved_resource(2).html  saved_resource(4).html  site-scripts.js.v1  slick-scripts.js.v1
examples/public_theater/main_page/: public_theater_main_page.html
examples/public_theater/main_page/public_theater_main_page_files/: 20c1630f4c.js  2107680652800873  823602105595980  bootstrap-ui.js.v1  calendar-styles.css.v1  css  destination  f.txt  friconix.js  gtm.js  js  js(1)  main.ccdc788d.js  oir.min.js  saved_resource  saved_resource(1)  saved_resource(4).html  season-calendar-overrides.css  slick-styles.css.v1  styles.css
scripts/: cron_example.sh
src/nyc_events_etl/: __main__.py  build.py  cli.py  date_parsing.py  google_calendar.py  ics.py  models.py  normalization.py  pdf_parser.py  pipeline.py  schedule.py
src/nyc_events_etl/exporters/: __init__.py  ics.py
src/nyc_events_etl/scrapers/: __init__.py  astor_place.py  asylum.py  base.py  caveat.py  common.py  frigid.py  here.py  liberty.py  nytw.py  performance_space.py  public_theater.py  registry.py  slipper_room.py  theater_for_the_new_city.py  vineyard.py  wild_project.py
tests/: conftest.py  test_build_pipeline.py  test_cli.py  test_date_parsing.py  test_example_scrapers.py  test_google_calendar.py  test_main_logging.py  test_models.py  test_normalization_ics.py  test_pdf_parser.py  test_schedule.py  test_scrapers.py
