[tool.poetry]
name = "nyc-events-etl"
version = "0.1.0"
description = "ETL pipeline to parse NYC event listings (PDF + web), normalize, export ICS, and sync to Google Calendar."
authors = ["Steve Bronder <sbronder@flatironinstitute.org>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "nyc_events_etl" }]

[tool.poetry.dependencies]
python = "^3.10"

# HTTP + parsing
httpx = "^0.27.0"
selectolax = "^0.3.21"
beautifulsoup4 = "^4.12.3"
regex = "^2024.5.15"
unidecode = "^1.3.8"
python-dotenv = "^1.0.1"
tenacity = "^8.3.0"

# Headless browser fallback (remember to run: `poetry run playwright install`)
playwright = "^1.46.0"

# PDF parsing
pdfplumber = "^0.11.4"

# Dates/times
python-dateutil = "^2.9.0.post0"
dateparser = "^1.2.0"
tzdata = "^2024.1"

# ICS generation
icalendar = "^5.0.11"

# Google Calendar API
google-api-python-client = "^2.133.0"
google-auth = "^2.32.0"
google-auth-oauthlib = "^1.2.0"

# (Optional) data validation for event schemas
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
freezegun = "^1.5.1"
respx = "^0.21.1"  # httpx mocking

[tool.poetry.scripts]
nyc-events = "nyc_events_etl.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"