[tool.poetry]
name = "nyc-events-etl"
version = "0.1.0"
description = "ETL pipeline to parse NYC event listings (PDF + web), normalize, export ICS, and sync to Google Calendar."
authors = ["Steve Bronder <sbronder@flatironinstitute.org>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "nyc_events_etl", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"

# HTTP + parsing
httpx = "*"
selectolax = "*"
beautifulsoup4 = "*"
regex = "*"
unidecode = "*"
python-dotenv = "*"
tenacity = "*"

# Headless browser fallback (remember to run: `poetry run playwright install`)
playwright = "*"

# PDF parsing
pdfplumber = "*"

# Dates/times
python-dateutil = "*"
dateparser = "*"
tzdata = "*"

# ICS generation
icalendar = "*"

# Google Calendar API
google-api-python-client = "*"
google-auth = "*"
google-auth-oauthlib = "*"

# (Optional) data validation for event schemas
pydantic = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
freezegun = "*"
respx = "*"  # httpx mocking

[tool.poetry.scripts]
nyc-events = "nyc_events_etl.__main__:main"
nyc-events-data = "nyc_events_etl.pipeline:poetry_output_build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
